<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bulletin-Board</string>
    <string name="action_settings">Settings</string>   
    <string name="label_hauptmenue">DHBW/Dashboard</string>
    <string name="label_angebote">Angebote</string>
    <string name="label_gesuche">Gesuche</string>
    <string name="label_anzeigeschalten">Anzeige schalten</string>
    <string name="label_suche">Detail-Suche</string>
    <string name="label_login">Anmeldung</string>
    <string name="label_benutzerbereich">Benutzer-Bereich</string>
    <string name="neue_anzeige">Neue Anzeige</string>
    <string name="kategorie">Kategorie</string>
    <string name="biete">Biete</string>
    <string name="suche">Suche</string>
    <string name="info">Info</string>
    <string name="bild">Bild</string>
    <string name="anzeige_freigeben">Anzeige freigeben</string>
    <string name="bild_hinzufuegen">Bild hinzufügen</string>
    <string name="preis">Preis</string>
    <string name="titel">Titel</string>
    <string name="anzeige_nschalten">Anzeige \nschalten</string>
    <string name="meine_nanzeigen">Meine \nAnzeigen</string>
    <string name="_konto_nverwaltung">" Konto-\nVerwaltung"</string>
    <string name="meine_nabos">Meine\nAbos</string>
    <string name="registration">Registrierung</string>
    <string name="passwort_neu">Passwort neu</string>
    <string name="wiederholung">wiederholung</string>
    <string name="passwort_ndern">Passwort ändern</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="kontakt_aufnehmen">Besitzer kontaktieren </string>
    <string name="angebot_entfernen">Angebot entfernen</string>
    <string name="kontaktformular">Kontaktformular</string>
    <string name="betrifft_inserattitel">Betrifft Inserattitel</string>
    <string name="betreff">Betreff</string>
    <string name="nachricht">Nachricht</string>
    <string name="senden">Senden</string>
    <string name="sie_sind_nicht_angemeldet_">Du bist noch nicht angemeldet!</string>
    <string name="passwort_nerneuern">Passwort \nerneuern</string>
    <string name="_">...</string>
    <string name="resetlastlogin">ResetLastLogin</string>
    <string name="anmeldung">Anmeldung</string>
    <string name="benutzer">Benutzer</string>
    <string name="komiatsm">ganza</string>
    <string name="k1">g1</string>
    <string name="passwort">Passwort</string>
    <string name="angebote">Angebote</string>
    <string name="gesuche">Gesuche</string>
    <string name="_detail_nsuche">" Detail-\nSuche"</string>
    <string name="benutzer_nbereich">Benutzer\nBereich</string>
    <string name="join_the_community_">Join the Community!</string>
    <string name="geben_sie_ihren_dhbw_benutzernamen_ein_">Gib deinen DHBW-Benutzernamen ein:</string>
    <string name="in_k_rze_bekommen_sie_eine_email_mit_ihren_zugangsdaten">In Kürze bekommst du eine DHBW-Email mit den Zugangsdaten.</string>
    <string name="email_senden">Email senden</string>
    <string name="detail_suche">Detail Suche</string>
    <string name="suche_nach">Suche nach</string>
    <string name="beschreibung_durchsuchen">Beschreibung durchsuchen</string>
    <string name="in_kategorie">in Kategorie</string>
    <string name="preis_von">Preis von</string>
    <string name="bis_zu">bis zu</string>
    <string name="beides">Beides</string>
    <string name="suchen">Suchen</string>
    <string name="abonnements">Abonnements</string>
    <string name="abobescheibung">Du möchtest als Erster zuschlagen?\nAbonniere Kategorien und bleibe immer\nauf dem neusten Stand.</string>
    <string name="abo_eintragen">Abo eintragen</string>
    <string name="bmw_e30_m3">BMW E30 M3</string>
    <string name="top_zustand_keine_m_ngel_">"Top zustand , keine Mängel ... "</string>
    <string name="verbinde_mit_datenbank_">Verbinde mit Datenbank ...</string>
    <string name="sie_sind_angemeldet_als_">"Du bist angemeldet als "</string>
    <string name="es_gibt_ein_neues_angebot">Es gibt ein neues Angebot</string>
    <string name="dhbw_nachricht">DHBW Nachricht</string>
    <string name="keine_verbindung_zum_internet">Keine Verbindung zum Internet</string>
    <string name="was_m_chten_sie_tun_">Was möchtest du tun?</string>
    <string name="beenden">Beenden</string>
    <string name="benutzer_bereich">Benutzerbereich</string>
    <string name="eintrag_loeschen">Eintrag löschen</string>
    <string name="m_chten_sie_ihr_inserat_wirklich_loeschen_">Möchtest du dein Inserat wirklich löschen?</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="wahle_bildquelle">Wähle Bildquelle</string>
    <string name="passwort_erneuern">Passwort erneuern</string>
    <string name="passwort_erfolgreich_geaendert">Passwort erfolgreich geändert</string>
    <string name="passw_rter_stimmen_nicht_berein">Ups. Deine Passwörter stimmen nicht überein</string>
    <string name="benutzername_oder_passwort_falsch">Ups. Benutzername oder Passwort  ist falsch</string>
    <string name="verbindung_fehlgeschlagen">Leider gibt es Probleme mit der Internet-Verbindung</string>
    <string name="registrierung">Registrierung</string>
    <string name="benutzer_bereits_vorhanden">Ups. Der Benutzer ist bereits vorhanden</string>
    <string name="_mit_freundlichen_gr_ssen_ihr_bbteam">"\n mit freundlichen Grüssen euer BBTeam"</string>
    <string name="meine_abonnements">Meine Abonnements</string>
    <string name="abo_gespeichert_">Abo gespeichert.</string>
    <string name="anzeige_mit_selbem_titel_schon_verwendent">Ups. Anzeige mit selbem Titel bereits verwendent</string>
    <string name="bitte_preis_angeben">Bitte Preis angeben</string>
    <string name="bitte_titel_eingeben">Bitte Titel eingeben</string>
    <string name="upload_abgeschlossen_">Upload abgeschlossen.</string>
    <string name="kontakt_formular">Kontakt Formular</string>
    <string name="nachricht_wurde_versendet">Nachricht wurde versendet</string>
    <string name="konto_verwaltung">Kontoverwaltung</string>
    <string name="euro">" €"</string>
    <string name="benutzerprofil">Benutzerprofil</string>
    <string name="name">Name</string>
    <string name="profildaten_einsehen">Deine Kontaktdaten können nur von registrierten Mitgliedern eingesehen werden.</string>
    <string name="kontaktdaten_mail_tel_facebook_">Kontaktdaten (Mail, Tel, Facebook)</string>
    <string name="avatar_hinzuf_gen">Bild hinzufügen</string>
    <string name="benutzer_nprofil">Benutzer\nProfil</string>
    <string name="kontakt_via">Kontakt via</string>
    <string name="profilansicht">Profilansicht</string>
    <string name="mein_profil">Mein Profil</string>
    <string name="telefonnr_">Telefonnr.</string>
    <string name="m_chten_sie_den_besitzer_des_inserats_anrufen_">Möchtest du den Besitzer des Inserats jetzt anrufen?</string>
    <string name="title_activity_widget_konfiguration">WidgetKonfiguration</string>
    <string name="inserat_wurde_gel_scht">Dein Inserat wurde gelöscht.</string>
    <string name="inserat_melden">Inserat melden</string>
    <string name="m_chtest_du_die_app_wirklich_beenden_">Möchtest du die App wirklich beenden?</string>
    <string name="_ffne_die_datenschutzerkl_rung">öffne die Datenschutzerklärung</string>
    <string name="es_ist_eine_neue_version_im_play_store_verf_gbar_und_zum_download_bereit_">Es ist eine neue Version im Play-Store verfügbar und zum Download bereit.</string>

</resources>
