<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb_background2"
    android:orientation="vertical"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp" 
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profil_imageView"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:contentDescription="@string/beschreibung"
            android:src="@drawable/bb_profileimage" />

        <TextView
            android:id="@+id/tv_benutzerprofil"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_gravity="bottom"
            android:background="@color/DHBW_gray_light"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/benutzerprofil"
            android:textColor="@color/DHBW_gray_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DHBW_gray_light"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tv_profil_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/profildaten_einsehen"
                android:padding="5dp"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tv_profil_name"
                style="@style/DHBW_Inputfields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:descendantFocusability="beforeDescendants"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"
                android:textStyle="italic" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/tv_meinprofil_telnr"
                style="@style/DHBW_Inputfields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:descendantFocusability="beforeDescendants"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/telefonnr_"
                android:inputType="number"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/button_profil_avatar"
                style="@style/DHBW_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/avatar_hinzuf_gen" />

            <Button
                android:id="@+id/button_benutzerprofil_senden"
                style="@style/DHBW_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senden" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>