<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb_background3"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="3dp"
        android:background="@color/DHBW_gray_light"
        android:gravity="left|center"
        android:padding="3dp"
        android:paddingLeft="10dp"
        android:text="@string/neue_anzeige"
        android:textColor="@color/DHBW_gray_dark"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DHBW_gray_light"
            android:columnCount="2"
            android:orientation="vertical"
            android:padding="7dp"
            android:rowCount="8"
            android:useDefaultMargins="true" >

            <TextView
                android:id="@+id/TextView_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/titel" />

            <EditText
                android:id="@+id/InseratTitel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_row="0"
                android:background="@color/DHBW_white"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/TextView_kategorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/kategorie" />

            <Spinner
                android:id="@+id/Kategorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="5dp"
                android:layout_row="1" />

            <TextView
                android:id="@+id/TextView_preis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/preis" />

            <EditText
                android:id="@+id/Preis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="left"
                android:layout_row="2"
                android:background="@color/DHBW_white"
                android:ems="10"
                android:inputType="number" />

            <RadioGroup
                android:id="@+id/radioGroupBieteSuche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center_vertical"
                android:layout_row="3"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioBiete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:checked="true"
                    android:text="@string/biete" />

                <RadioButton
                    android:id="@+id/radioSuche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suche" />
            </RadioGroup>

            <TextView
                android:id="@+id/TextView_beschreibung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/info" />

            <EditText
                android:id="@+id/Beschreibung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_row="4"
                android:background="@color/DHBW_white"
                android:ems="10"
                android:scrollbars="vertical"
                android:singleLine="true" />

            <TextView
                android:id="@+id/TextView_bild"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="5"
                android:text="@string/bild" />

            <ImageView
                android:id="@+id/previewImage"
                android:visibility="gone"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_columnSpan="2"
                android:layout_column="0"
                android:layout_row="6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="7"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button2"
                    style="@style/DHBW_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:minHeight="35dp"
                    android:onClick="runImageHelper"
                    android:text="@string/bild_hinzufuegen"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonCam"
                    style="@style/DHBW_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:onClick="anDBSenden"
                    android:text="@string/anzeige_freigeben"
                    android:textSize="15sp" />
            </LinearLayout>
        </GridLayout>
    </ScrollView>

</LinearLayout>