<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb_background3"
    android:orientation="vertical"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_kontaktformular" />

            <TextView
                android:id="@+id/tv_kontakt"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:background="@color/DHBW_gray_light"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/kontaktformular"
                android:textColor="@color/DHBW_gray_dark"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DHBW_gray_light"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_kontakt_inserattitel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/betrifft_inserattitel"
                    android:padding="5dp"
                    android:text="Inserat: "
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tv_kontakt_betreff"
                    style="@style/DHBW_Inputfields"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:hint="@string/betreff"
                    android:textSize="20sp" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/tv_kontakt_nachricht"
                    style="@style/DHBW_Inputfields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:ems="10"
                    android:hint="@string/nachricht"
                    android:inputType="textMultiLine"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_kontaktformular_senden"
                    style="@style/DHBW_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senden" />

            </LinearLayout>
        </ScrollView>

</LinearLayout>

    </LinearLayout>
