<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bb_background1"
    android:orientation="vertical"
    android:padding="25dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_passwort_erneuern" />

            <TextView
                android:id="@+id/tv_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/DHBW_gray_light"
                android:padding="5dp"
                android:paddingLeft="10dp"
                android:text="@string/registration"
                android:textColor="@color/DHBW_gray_dark"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/tv_changePasswort_PassNeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DHBW_gray_light"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/passwort_neu"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="25dp" >

            <EditText
                android:id="@+id/tv_changePasswort_PassWdh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/DHBW_gray_light"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/wiederholung"
                android:inputType="textPassword"
                android:textSize="22sp"
                android:textStyle="italic" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonChangePassword_ChangePass"
            style="@style/DHBW_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/passwort_ndern"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>